Added the FastRNN-based model

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "fbank.c" "esp32s3_eye_kws_demo.c"
+idf_component_register(SRCS "fbank.c" "fast_rnn.c" "esp32s3_eye_kws_demo.c"
                     PRIV_REQUIRES esp_driver_i2s
                                   esp_driver_gpio
                                   esp_driver_ledc
