Added FastGRNN cell support

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,12 @@
-idf_component_register(SRCS "fbank.c" "fast_rnn.c"
+if(CONFIG_RNN_CELL_FASTGRNN)
+    set(FAST_RNN_C_FILE "fast_grnn.c")
+elseif(CONFIG_RNN_CELL_FASTRNN)
+    set(FAST_RNN_C_FILE "fast_renn.c")
+else()
+    message(FATAL "RNN cell type not set!")
+endif()
+
+idf_component_register(SRCS "fbank.c" ${FAST_RNN_C_FILE}
                             "esp32s3_eye_kws_demo.c"
                     PRIV_REQUIRES esp_driver_i2s
                                   esp_driver_gpio
@@ -7,3 +15,4 @@ idf_component_register(SRCS "fbank.c" "fast_rnn.c"
                                   esp_timer
                                   esp_lcd
                     INCLUDE_DIRS "")
+
